tips from balint

--- a/src/content/docs/guides/Beginners/Your First Shader/4_shadows.mdx
+++ b/src/content/docs/guides/Beginners/Your First Shader/4_shadows.mdx
@@ -91,7 +91,7 @@ To do this, we first need to determine the position of the pixel at all. We can 
 
 **TODO: SPACE CONVERSION EXPLANATION / TUTORIAL**
 
-To do these space conversions, we will make use of a function, `projectAndDivide`. This function applies a projection matrix and then divides by the `w` component, skipping straight to clip space. **Place this function definition outside and before `main` but after the declaration of `texcoord`.**
+To do these space conversions, we will make use of a function, `projectAndDivide`. This function applies a projection matrix and then divides by the `w` component, skipping clip space. **Place this function definition outside and before `main` but after the declaration of `texcoord`.**
 
 ```glsl
 vec3 projectAndDivide(mat4 projectionMatrix, vec3 position){
@@ -108,7 +108,7 @@ vec3 viewPos = projectAndDivide(gbufferProjectionInverse, NDCPos);
 vec3 feetPlayerPos = (gbufferModelViewInverse * vec4(viewPos, 1.0)).xyz;
 vec3 shadowViewPos = (shadowModelView * vec4(feetPlayerPos, 1.0)).xyz;
 vec4 shadowClipPos = shadowProjection * vec4(shadowViewPos, 1.0);
-vec3 shadowNDCPos = projectAndDivide(shadowProjection, shadowViewPos);
+vec3 shadowNDCPos = shadowClipPos.xyz / shadowClipPos.w;
 vec3 shadowScreenPos = shadowNDCPos * 0.5 + 0.5;
 ```
 
@@ -159,7 +159,7 @@ This makes things a little bit sharper, but they still don't look great.
 The easy solution here would be to just increase the shadow map resolution to some very big number like 8192 (it is convention to use a power of two for your shadow map size), but this will start taking up an awful lot of video memory, causing a performance impact. Instead, we can make use of something known as 'shadow distortion'. The idea is that since stuff that is closer to us is what we can see most clearly, we want to dedicate more of the shadow map resolution to this stuff, and less of it to things that are further away.
 
 :::note[Note]
-Shadow distortion as we are applying it is quite an old technique, and does not work as well as other, more modern methods for optimising use of shadow maps like [Cascaded Shadow Maps](https://learnopengl.com/Guest-Articles/2021/CSM). However, due to the limitations of the Optifine/Iris pipeline, it's quite hard to do anything more advanced, so this is what we are sticking with.
+Shadow distortion as we are applying it is quite an old technique, and does not work as well as other, more modern methods for optimising use of shadow maps like [Cascaded Shadow Maps](https://learnopengl.com/Guest-Articles/2021/CSM). For example, it tends to create large blobs of shadow on the centre of triangles, because GPUs can't draw curved triangles. However, due to the limitations of the Optifine/Iris pipeline, it's quite hard to do anything more advanced, so this is what we are sticking with.
 :::
 
 ## Shadow Distortion
@@ -203,12 +203,13 @@ vec3 distortShadowClipPos(vec3 shadowClipPos){
 	distortionFactor += 0.1; // very small distances can cause issues so we add this to slightly reduce the distortion
 
 	shadowClipPos.xy /= distortionFactor;
+  shadowClipPos.z *= 0.5; // increases shadow distance on the Z axis, which helps when the sun is very low in the sky
 	return shadowClipPos;
 }
 ```
 
 :::caution[Note]
-We do not apply distortion to the `z` component as the origin of shadow clip space is the sun, not the player. On the `x` and `y` axes, things line up fine anyway, but on the `z` axis, they do not.
+We do not apply distortion to the `z` component as the origin of shadow clip space is the sun, not the player. On the `x` and `y` axes, things line up fine anyway, but on the `z` axis, they do not. Instead, we just half the `z` component, which essentially doubles the range on this axis, at the cost of precision. This is because when the sun gets low in the sky, the normal range of 255 blocks becomes noticeable.
 :::
 
 We now need to apply that distortion. Back in `shadow.vsh`, `gl_Position` is in clip space, so we can simply apply it to the `xyz` component.
