--- a/src/content/docs/guides/Beginners/Your First Shader/6_next_steps.mdx
+++ b/src/content/docs/guides/Beginners/Your First Shader/6_next_steps.mdx
@@ -10,7 +10,7 @@ This is as far as we go with the tutorial, but there's plenty more that can be d
 
 ## Issues to Fix
 ### Transparent Entities
-![](/src/assets/first_shader_guide/6/transparententities.png)
+![](/src/assets/first_shader_guide/transparententities.webp)
 Right now, our entities seem semitranslucent. This is because we have only written a `gbuffers_terrain` program. Entities are handled by `gbuffers_entities`, which falls back to `gbuffers_textured_lit`. Since we have not overriden this program, it doesn't write our normals or lightmap data to the buffers we need it to. An easy way to resolve this is to rename `gbuffers_terrain` to `gbuffers_textured_lit`, which most programs we care about will fall back to. For more information, see [Gbuffers](http://localhost:4321/reference/programs/gbuffers/).
 
 ### Bright Night
