--- a/src/content/docs/guides/Beginners/Your First Shader/1_composite.mdx
+++ b/src/content/docs/guides/Beginners/Your First Shader/1_composite.mdx
@@ -160,7 +160,7 @@ color.rgb = vec3(dot(color.rgb, vec3(1.0/3.0)));
 
 Your screen should now look like this!
 
-![](/src/assets/first_shader_guide/1/monochrome.png)
+![](/src/assets/first_shader_guide/monochrome.webp)
 
 :::tip[Next steps]
 See if you can make the screen red, or green. Using `texcoord`, can you make one half green and the other half red?
