--- a/src/content/docs/guides/Beginners/Your First Shader/5_fog.mdx
+++ b/src/content/docs/guides/Beginners/Your First Shader/5_fog.mdx
@@ -53,7 +53,7 @@ void main() {
 It's good practice to try to minimise duplicate code as much as possible. To organise your code better, consider moving functions like `projectAndDivide` to a file you can include wherever you need it, i.e `/lib/util.glsl`.
 :::
 
-## The fog is Coming
+## The Fog is Coming
 
 What we want is for something which is nearly out of render distance to have lots of fog, and something which is close to the player not to have any fog at all. To do this, we can divide the distance from the player by a uniform `float`, [`far`](/reference/uniforms/general/far). The name of this variable is misleading, as what it gives us is the player's render distance, in blocks.
 
@@ -65,7 +65,7 @@ We can then simply do
 color.rgb = mix(color.rgb, fogColor, length(viewPos)/far);
 ```
 
-![](/src/assets/first_shader_guide/5/linearfog.png)
+![](/src/assets/first_shader_guide/linearfog.webp)
 
 And our terrain now nicely blends into the horizon.
 
@@ -79,7 +79,7 @@ This use of an exponential function for the falloff is based on a real physical 
 
 We can visualise this by plotting `f` against `distance` on a graph.
 
-![](/src/assets/first_shader_guide/5/foggraph.png)
+![](/src/assets/first_shader_guide/foggraph.webp)
 
 As you can see, the function curves nicely to make the fog seem further away.
 
@@ -101,6 +101,6 @@ color.rgb = mix(color.rgb, fogColor, clamp(fogFactor, 0.0, 1.0));
 Note that we clamp the value of `fogFactor` between `0` and `1`. This is because the behaviour of `mix` is undefined if it is outside this range. Since the render distance in blocks is along three axes, blocks can be more than this distance away along the diagonals, so in some cases, `distance` could be more than `1`.
 :::
 
-![](/src/assets/first_shader_guide/5/exponentialfog.png)
+![](/src/assets/first_shader_guide/exponentialfog.webp)
 
 And now our fog feels a lot more natural!
